--- a/Week 3.ipynb
+++ b/Week 3.ipynb
@@ -54,16 +54,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-18T17:22:52.798149Z",
      "start_time": "2020-08-18T17:22:52.792164Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['dogs', 'cats', 'houses', 'toys', 'horses', 'barns']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "singular_words = ['dog', 'cat', 'house', 'toy']\n"
+    "singular_words = ['dog', 'cat', 'house', 'toy','horse', 'barn']\n",
+    "plural_words = []\n",
+    "for each in singular_words:\n",
+    "    plural_words.append(each + 's')\n",
+    "plural_words\n"
    ]
   },
   {
@@ -77,14 +92,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-18T18:49:06.051285Z",
      "start_time": "2020-08-18T18:49:06.043306Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dogs are creatures\n",
+      "cats are creatures\n",
+      "houses are objects\n",
+      "toys are objects\n",
+      "horses are creatures\n",
+      "barns are objects\n"
+     ]
+    }
+   ],
    "source": [
     "word_catogory = {\n",
     "    'houses':'objects',\n",
@@ -93,7 +121,10 @@
     "    'dogs':'creatures',\n",
     "    'cats':'creatures',\n",
     "    'horses':'creatures'\n",
-    "}\n"
+    "}\n",
+    "\n",
+    "for each in plural_words:\n",
+    "    print(each,'are', word_catogory[each])\n"
    ]
   },
   {
@@ -114,12 +145,162 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10234, 500, 125, 50213, 1440, 64920, 225, 425, 1]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers = ['10234', '500', '125', '50213', '1440', '64920', '225', '425', '1']\n",
+    "\n",
+    "as_numbers = []\n",
+    "\n",
+    "for each in numbers: \n",
+    "    as_numbers.append(int(each))\n",
+    "\n",
+    "as_numbers\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14231.444444444445"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statistics\n",
+    "\n",
+    "statistics.mean(as_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "128083"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(as_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(as_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10234, 500, 50213, 1440, 64920, 225, 425]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "as_numbers.remove(min(as_numbers))\n",
+    "as_numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10234, 500, 50213, 1440, 225, 425]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "as_numbers.remove(max(as_numbers))\n",
+    "as_numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10506.166666666666"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "statistics.mean(as_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "['10234', '500', '125', '50213', '1440', '64920', '225', '425', '1']\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -138,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
