Three Pigs Complete

--- a/Three Pigs cont.ipynb
+++ b/Three Pigs cont.ipynb
@@ -9,17 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please select a house to build: Straw, Stick or Brick   mud\n",
-      "Not valid, please try again\n",
-      "Please select a house to build: Straw, Stick or Brick   logs\n",
-      "Not valid, please try again\n",
       "Please select a house to build: Straw, Stick or Brick   stick\n"
      ]
     }
@@ -30,30 +26,22 @@
     "while pigs_house.lower() not in ['straw', 'stick', 'brick']:\n",
     "    if pigs_house.lower() not in ['straw', 'stick', 'brick']:\n",
     "        print('Not valid, please try again')\n",
-    "    pigs_house = input('Please select a house to build: Straw, Stick or Brick   ')"
+    "\n",
+    "    pigs_house = input('Please select a house to build: Straw, Stick or Brick   ')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from random import randrange\n",
-    "print(randrange(10))"
+    "from random import randrange"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +78,7 @@
        "'stick'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +98,7 @@
        "0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +118,7 @@
        "{'straw': 1, 'stick': 4, 'brick': 7}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +138,7 @@
        "{'young': 6, 'old': 3, 'copd': 0}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,38 +171,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'old'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(wolves.keys())[randrange(3)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "house is still up\n"
+      "Ready for Round 1. Press enter to continue...\n",
+      "Along comes a young wolf!\n",
+      "He huffs and puffs and ...\n",
+      "Your stick house is blown down\n",
+      "Game Over! You have scored 2 points!\n"
      ]
     }
    ],
    "source": [
     "i = 1 \n",
     "\n",
-    "while houses_up:\n",
-    "    input('Ready for Round ', i)\n",
+    "while house_up:\n",
+    "    input('Ready for Round '+ str(i) + '. Press enter to continue...')\n",
     "    \n",
+    "    i += 1\n",
     "    \n",
-    "    \n",
-    "    if wolves['old'] > houses['stick']:\n",
+    "    current_wolf = list(wolves.keys())[randrange(3)]\n",
+    "    print('Along comes a',current_wolf,'wolf!')\n",
+    "    print('He huffs and puffs and ...')\n",
+    "    if wolves[current_wolf] > houses[pigs_house]:\n",
     "        house_up = False\n",
-    "        print('house is blown down')\n",
+    "        print('Your ' +pigs_house + ' house is blown down')\n",
     "    else:\n",
-    "        print('house is still up')"
+    "        print('Your ' +pigs_house + ' house is still up')\n",
+    "        \n",
+    "    if pigs_house.lower() == 'brick':\n",
+    "        if randrange(10) > 8:\n",
+    "            print('Oh No! An Earthquake! Your Brick house has been destroyed!')\n",
+    "            house_up = False\n",
+    "            \n",
+    "    player_score += house_points[pigs_house]\n",
+    "    \n",
+    "print('Game Over! You have scored',player_score, 'points!')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
