--- a/Week 4.ipynb
+++ b/Week 4.ipynb
@@ -42,9 +42,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Item_Number</th>\n",
+       "      <th>Unit_Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SKU0012</td>\n",
+       "      <td>$12.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SKU0096</td>\n",
+       "      <td>$199.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SKU1019</td>\n",
+       "      <td>$4.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SKU1012</td>\n",
+       "      <td>$1,425.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Item_Number Unit_Price\n",
+       "0     SKU0012     $12.95\n",
+       "1     SKU0096    $199.95\n",
+       "2     SKU1019      $4.95\n",
+       "3     SKU1012  $1,425.00"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -56,9 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SKU0012 unit price is $12.95\n"
+     ]
+    }
+   ],
    "source": [
     "#example:\n",
     "print(item_df['Item_Number'][0], 'unit price is', item_df['Unit_Price'][0])"
@@ -66,11 +137,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SKU0096 unit price is $199.95\n"
+     ]
+    }
+   ],
    "source": [
-    "# create code to print each line individually\n"
+    "# create code to print each line individually\n",
+    "print(item_df['Item_Number'][1], 'unit price is', item_df['Unit_Price'][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SKU1019 unit price is $4.95\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(item_df['Item_Number'][2], 'unit price is', item_df['Unit_Price'][2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SKU1012 unit price is $1,425.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(item_df['Item_Number'][3], 'unit price is', item_df['Unit_Price'][3])"
    ]
   },
   {
@@ -88,19 +202,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "order_data = [[12, 5], [96, 9], [1019, 200]]\n",
     "\n",
     "item_df = pd.DataFrame(order_data, columns = ['Item_Number', 'Quantity'])\n",
-    "item_df"
+    "item_df\n",
+    "\n",
+    "Total_Amount = ['$5.00','$9.00','$200.00']\n",
+    "\n",
+    "\n",
+    "df['Total_Amount']= Total_Amount"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,6 +228,181 @@
     "#      hint: look up .join() to combine the data\n",
     "#      hint: mapping with regular expressions can help with converting unit price\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0013\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = '13'\n",
+    "\n",
+    "print(test.zfill(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[[12, 5], [96, 9], [1019, 200]]'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(order_data).zfill(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['000[12, 5]', '000[96, 9]', '[1019, 200]']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[str(i).zfill(10) for i in order_data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "sequence item 0: expected str instance, list found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-50-f7edabe96216>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0morder_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: sequence item 0: expected str instance, list found"
+     ]
+    }
+   ],
+   "source": [
+    "str(raw_data).join(order_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Total_Amount = ['$5.00','$9.00','$200.00']\n",
+    "df = pd.DataFrame(order_data, columns = ['Item_Number', 'Quantity'])\n",
+    "df['Total_Amount']= Total_Amount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Item_Number</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Total_Amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>$5.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>96.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>$9.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1019.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>$200.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1127.0</td>\n",
+       "      <td>214.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Item_Number  Quantity Total_Amount\n",
+       "0         12.0       5.0        $5.00\n",
+       "1         96.0       9.0        $9.00\n",
+       "2       1019.0     200.0      $200.00\n",
+       "3       1127.0     214.0          NaN"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.append(df.sum(numeric_only=True), ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -127,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
