--- a/Week 4.ipynb
+++ b/Week 4.ipynb
@@ -188,6 +188,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for each_row in range)len(item_df):\n",
+    "        print(item_df['Item_Number'][each_row],'unit price is', item_df())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -219,14 +229,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'order_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-b1538d8d9edf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0morder_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Item_Number'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'SKU'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0morder_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Item_Number'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzfill\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0morder_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'order_data' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# create code to complete the steps listed above\n",
-    "#      hint: look up the function .zfill() to help with the missing zeros\n",
-    "#      hint: look up .join() to combine the data\n",
-    "#      hint: mapping with regular expressions can help with converting unit price\n"
+    "\n",
+    "order_data['Item_Number'] = 'SKU' + order_data['Item_Number'].astype(str).str.zfill(4)\n",
+    "order_data"
    ]
   },
   {
